# pythoneda-rydnr

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml
PythonEDARydnr/: client.py  server.py
PythonEDARydnr/application/: application.py
PythonEDARydnr/infrastructure/cli/: git_repo_found_cli.py  server_url_cli.py
PythonEDARydnr/infrastructure/network/grpc/: client.py  grpc_server.py
