[metadata]
name = pythoneda-rydnr
version = 0.0.1a1
author = rydnr
author_email = github@acm-sl.org
description = Rydnr interactions with PythonEDA domains
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rydnr/pythoneda-rydnr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = PythonEDARydnr
python_requires = >=3.7

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests
